# ivory

./: LICENSE  README.md  cabal.project  cabal.project.local.ci  ci.dhall
.github/workflows/: ci.yaml
ivory/: CHANGELOG.md  ivory.cabal
ivory-artifact/: ivory-artifact.cabal
ivory-backend-c/: CHANGELOG.md  ivory-backend-c.cabal
ivory-backend-c/src/Ivory/Compile/C/: CmdlineFrontend.hs  Gen.hs  Modules.hs  Types.hs
ivory-backend-c/src/Ivory/Compile/C/CmdlineFrontend/: Options.hs
ivory-eval/: ivory-eval.cabal
ivory-eval/src/Ivory/: Eval.hs
ivory-eval/test/: Test.hs
ivory-examples/: ivory-examples.cabal
ivory-examples/examples/: ClassHierarchy.hs  ConstPtrRef.hs  FibLoop.hs  Overflow.hs
ivory-hw/: ivory-hw.cabal
ivory-model-check/: ivory-model-check.cabal
ivory-model-check/src/Ivory/: ModelCheck.hs
ivory-model-check/src/Ivory/ModelCheck/: CVC4.hs  Ivory2CVC4.hs  Monad.hs
ivory-model-check/test/: Test.hs
ivory-opts/: ivory-opts.cabal
ivory-opts/src/Ivory/Opts/: AssertFold.hs  CFG.hs  CSE.hs  SanityCheck.hs  TypeCheck.hs  Utils.hs
ivory-opts/testing/: Bounds.hs
ivory-quickcheck/: ivory-quickcheck.cabal
ivory-quickcheck/src/Ivory/: QuickCheck.hs
ivory-quickcheck/test/: Test.hs
ivory-serialize/: ivory-serialize.cabal
ivory-serialize/src/Ivory/Serialize/: Atoms.hs  Struct.hs
ivory-stdlib/: ivory-stdlib.cabal
ivory-stdlib/src/Ivory/Stdlib/: String.hs
ivory-tasty/: LICENSE  ivory-tasty.cabal
ivory-tasty/src/Ivory/: Tasty.hs
ivory-tasty/test/: Test.hs
ivory/src/Ivory/: Language.hs
ivory/src/Ivory/Language/: Area.hs  CArray.hs  Cast.hs  Cond.hs  Coroutine.hs  Init.hs  MemArea.hs  Pointer.hs  Proc.hs  Proxy.hs  Ref.hs  SizeOf.hs  String.hs  Struct.hs
ivory/src/Ivory/Language/BitData/: Array.hs  BitData.hs  Bits.hs
ivory/src/Ivory/Language/Syntax/: AST.hs
ivory/src/Ivory/Language/Syntax/Concrete/: Location.hs  QQ.hs
ivory/src/Ivory/Language/Syntax/Concrete/QQ/: StmtQQ.hs  TypeQQ.hs
