cabal-version:       2.2
name:                ivory-backend-c
version:             0.1.0.9
author:              Galois, Inc.
maintainer:          leepike@galois.com
category:            Language
synopsis:            Ivory C backend.
description:         Ivory compiler, to a subset of C99.
homepage:            http://ivorylang.org
build-type:          Simple
data-files:             runtime/ivory.h,
                        runtime/ivory_templates.h,
                        runtime/ivory_asserts.h
license:             BSD-3-Clause
license-file:        LICENSE
extra-doc-files:     CHANGELOG.md
source-repository    this
  type:     git
  location: https://github.com/distrap/ivory
  tag:      hackage-0.1.0.4

library
  exposed-modules:      Ivory.Compile.C,
                        Ivory.Compile.C.Gen,
                        Ivory.Compile.C.Gen.Const,
                        Ivory.Compile.C.Modules,
                        Ivory.Compile.C.Prop,
                        Ivory.Compile.C.Types,
                        Ivory.Compile.C.CmdlineFrontend,
                        Ivory.Compile.C.CmdlineFrontend.Options
  other-modules:        Paths_ivory_backend_c

  build-depends:        base >= 4.7 && < 5,
                        ivory,
                        ivory-artifact,
                        ivory-opts,
                        directory,
                        filepath,
                        language-c-quote >= 0.13,
                        mainland-pretty >= 0.6,
                        monadLib >= 3.7,
                        pretty >= 1.1,
                        srcloc,
  hs-source-dirs:       src
  default-language:     Haskell2010

  ghc-options:          -Wall
