cabal-version:       2.2
name:                ivory-hw
version:             0.1.0.6
license:             BSD-3-Clause
license-file:        LICENSE
author:              Galois, Inc.
maintainer:          jamesjb@galois.com, leepike@galois.com
copyright:           2013 Galois, Inc.
synopsis:            Ivory hardware model (STM32F4).
description:         Hardware model for Ivory.  Currently, the STM32F4 is supported; others may be added.
homepage:            http://ivorylang.org
category:            Language
build-type:          Simple
data-files: support/ivory_hw_prim.h
source-repository    this
  type:     git
  location: https://github.com/distrap/ivory
  tag:      hackage-0.1.0.4


library
  exposed-modules:     Ivory.HW,
                       Ivory.HW.Reg,
                       Ivory.HW.BitData,
                       Ivory.HW.Module
  other-modules:       Ivory.HW.IOArea,
                       Ivory.HW.Prim,
                       Paths_ivory_hw,
                       ExampleTypes
  hs-source-dirs:      src, examples
  build-depends:       base >= 4.7 && < 5,
                       ivory,
                       ivory-artifact
  default-language:    Haskell2010
  ghc-options:         -Wall
