cabal-version:       2.2
name:                ivory-opts
version:             0.1.0.7
author:              Galois, Inc.
maintainer:          leepike@galois.com
category:            Language
build-type:          Simple
synopsis:            Ivory compiler optimizations.
description:         Ivory compiler optimizations as well as compiler insertions.  Primarily used by backends.
homepage:            http://ivorylang.org
license:             BSD-3-Clause
license-file:        LICENSE
source-repository    this
  type:     git
  location: https://github.com/distrap/ivory
  tag:      hackage-0.1.0.4

library
  exposed-modules:      Ivory.Opts.AssertFold,
                        Ivory.Opts.BitShift,
                        Ivory.Opts.CFG,
                        Ivory.Opts.CSE,
                        Ivory.Opts.ConstFold,
                        Ivory.Opts.ConstFoldComp,
                        Ivory.Opts.DivZero,
                        Ivory.Opts.Index,
                        Ivory.Opts.FP,
                        Ivory.Opts.Overflow,
                        Ivory.Opts.SanityCheck,
                        Ivory.Opts.TypeCheck

  other-modules:        Ivory.Opts.Utils

  build-depends:        base >= 4.7 && < 5,
                        containers,
                        data-reify >=0.6,
                        dlist >= 0.5,
                        fgl >= 5.4.2.4,
                        filepath,
                        ivory,
                        monadLib >= 3.7,
                        pretty
  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -Wall
