cabal-version:       2.2
name:                ivory-stdlib
version:             0.1.0.5
author:              Galois, Inc.
maintainer:          leepike@galois.com
copyright:           2013 Galois, Inc.
category:            Language
synopsis:            Ivory standard library.
description:         A standard library for Ivory.
homepage:            http://ivorylang.org
build-type:          Simple
license:             BSD-3-Clause
license-file:        LICENSE
data-files: support/ivory_stdlib_string_prim.h,
            support/ivory_stdlib_string_prim.c
source-repository    this
  type:     git
  location: https://github.com/distrap/ivory
  tag:      hackage-0.1.0.4

library
  exposed-modules:      Ivory.Stdlib,
                        Ivory.Stdlib.Control,
                        Ivory.Stdlib.Init,
                        Ivory.Stdlib.Maybe,
                        Ivory.Stdlib.Memory,
                        Ivory.Stdlib.Operators,
                        Ivory.Stdlib.String

  other-modules:        Paths_ivory_stdlib

  build-depends:        base >= 4.7 && < 5,
                        ivory,
                        ivory-artifact

  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -Wall
